# PrismaAndroid

./: .gitignore  README.md
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidOut.cpp  AndroidOut.h  CMakeLists.txt  Component.h  CubemapTextureAsset.cpp  GameObject.h  IShader.h  MathTypes.h  MeshRenderer.h  Model.h  Renderer.cpp  Renderer.h  RendererAPI.h  RendererOpenGL.cpp  RendererOpenGL.h  RendererVulkan.cpp  RendererVulkan.h  Scene.h  SkyboxRenderer.h  TextureAsset.cpp  TextureAsset.h  VulkanContext.h  main.cpp  stb_impl.cpp
app/src/main/cpp/renderer/: BackgroundPass.cpp  BackgroundPass.h  OpaquePass.h  RenderPass.h  RenderPipeline.cpp
app/src/main/cpp/renderer/BasicPipeline/: Architecture.md  BasicPipelineRenderer.h  IRenderFeature.h  RenderHandle.cpp  RenderHandle.h  ScriptableRenderFeature.h
app/src/main/cpp/renderer/BasicPipeline/Passes/: AntiAliasingPass.h  DebugPass.h  DepthPrePass.h  EffectPass.h  PostProcessPass.h  ScreenSpacePass.h  UIPass.h  UtilityPass.h
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: shader.frag
gradle/wrapper/: gradle-wrapper.properties
